[project]
name = "cavegenerator"
version = "0.1.0"
description = ""
authors = [
    {name = "TuomasHirv",email = "hirvonentume@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-benchmark (>=5.2.3,<6.0.0)"
]

[tool.poetry]
packages = [{include = "cavegenerator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-benchmark (>=5.2.3,<6.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
[tool.coverage.run]
# This tells coverage.py to ignore these files
omit = [
    "tests/*",          # Ignore everything in the tests folder
]